* Changed z-index to inline styles so that later dialog instances will have higher z-index than the earlier dialog instances. * Added "!important" to the dialog's and the dialog mask's "position" property in order to keep them fixed forever. * Explicitly specify the background of the dialog as transparent. * Changed how dialog size classes work. * Changed how user defined dialog classes work and made changes accordingly. * Added a constant for dialog's attribute names and made changes accordingly. * Added two default values for z-index related variables. * Moved the code to open the dialog upon initialization to the post link function. * Made change to the invocation of the "disableDraggable" function according to the changes in the k-draggable directive.

--- a/client/ng-k-dialog/scss/k-dialog.scss
+++ b/client/ng-k-dialog/scss/k-dialog.scss
@@ -4,29 +4,29 @@
 
 .k-dialog {
     @include default-box-shadow(#888888, 3px, 3px);
+    background-color: transparent;
     border-radius: 5px;
     display: none;
     overflow: hidden;
     padding: 10px;
-    position: fixed;
+    position: fixed !important;
     transform-origin: 100% 0;
     vertical-align: middle;
-    z-index: 1501;
 }
 
-.k-dialog.large {
+.k-dialog-large {
     @include centered-dialog(480px, 780px);
 }
 
-.k-dialog.medium {
+.k-dialog-medium {
     @include centered-dialog(380px, 620px);
 }
 
-.k-dialog.small {
+.k-dialog-small {
     @include centered-dialog(280px, 460px);
 }
 
-.k-dialog.mini {
+.k-dialog-mini {
     @include centered-dialog(180px, 300px);
 }
 
@@ -84,15 +84,14 @@
     @include mask();
     background-color: #FFFFFF;
     opacity: 0.7;
-    position: fixed;
-    z-index: 1500;
+    position: fixed !important;
 }
 
 .loading-mask {
     @include mask();
-    position: absolute;
     background-color: #FFFFFF;
     opacity: 0.7;
+    position: absolute;
     z-index: 1500;
 }
 
